# contract-template

./: Cargo.toml  README.md
artifacts/: cards-backend.wasm
examples/: schema.rs
src/: contract.rs  lib.rs  state.rs
